<resources>
    <string name="app_name">Calculator</string>
    <string name="nights_mode">Night mode</string>
    <string name="lights_mode">Day mode</string>
    <!--TableRow one-->
    <string name="ac">AC</string>
    <string name="braces_left">(</string>
    <string name="braces_right">)</string>
    <string name="division">/</string>
    <!--TableRow two-->
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="total">+</string>
    <!--TableRow tree-->
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="mines">-</string>
    <!--TableRow four-->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="tree">3</string>
    <string name="multiplication">*</string>
    <!--TableRow five-->
    <string name="c">C</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
</resources>